@@ -13,7 +13,7 @@
     </h2>
     <nz-button-group *ngIf="ms.game.enemyManager.currentEnemy">
       <button nz-button nzType="primary" (click)="attack(-1)">
-        Attack All
+        Attack
       </button>
       <button nz-button nzType="" (click)="nuke()">
         Nuke &nbsp;
